--- a/package.json
+++ b/package.json
@@ -2,6 +2,6 @@
     "name": "mean-mvc",
     "version": "0.0.1",
     "dependencies": {
-        "express": "^4.21.1"
+        "express": "4.21.1"
     }
 }
